<resources>
    <string name="app_name">Group Manager</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="name">Pratham</string>
    <string name="date">2019.04.15 MON</string>
    <string name="location">Manali</string>
    <string name="day">MON</string>
    <string name="dateText">2019.04.11</string>
    <string name="personNo">10</string>
    <string name="manage">Manage</string>
    <string name="your_trips">Your Trips</string>
    <string name="start_now">Start Now</string>
    <string name="a_journey_of_a_thousand_miles_begins_with_a_single_step">A journey of a thousand miles begins with a single step.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_location">Add location</string>
    <string name="companions">Companions</string>
    <string name="_0">00</string>
    <string name="add_members">Add members</string>
    <string name="_5">5</string>
    <string name="name_n">Name</string>
    <string name="done">Done</string>
    <string name="tag">Great things  never came  from comfort  zones.</string>
    <string name="price">$ 00.00</string>
    <string name="add_expense">Add Expense</string>
    <string name="end_this_trip">End this Trip</string>
    <string name="you_adding_for">You Adding for</string>
    <string name="food">Food</string>
    <string name="time">15:56:60</string>
    <string name="expense">Expense</string>
    <string name="dollar">$</string>
    <string name="will_contribute">will contribute</string>
    <string name="heading">heading</string>
    <string name="dollar_zero">$0</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="shopping">Shopping</string>
    <string name="travelling">Travelling</string>
    <string name="gaming">Games</string>
    <string name="contributions">Contributions</string>
    <string name="total">Total</string>
    <string name="all_expenses_showed_here_are_added_by_pratham">All expenses showed here are added by Pratham</string>
    <string name="collect">Collect</string>
    <string name="this_amount_includes_only_group_contri_individuals_contri_will_be_added_at_the_checkout">This amount includes only group contri. Individuals contri will be added at the checkout.</string>
    <string name="summary">Summary</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="_4_days">4 Days</string>
    <string name="_8_people">8 People</string>
    <string name="finish">Finish</string>
    <string name="collected">Collected</string>
    <string name="add">add</string>
</resources>
