<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:id="@+id/name"/>
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_action_dot_grey"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/name"
        android:id="@+id/dot"
        android:layout_toRightOf="@id/name" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/dot"
        android:text="@string/price"
        android:layout_margin="15dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_toStartOf="@+id/collect"
        android:id="@+id/price"
        android:layout_toRightOf="@id/dot"
        android:layout_toLeftOf="@+id/collect" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collect"
        android:padding="15dp"
        android:layout_marginTop="1dp"
        android:layout_centerVertical="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:background="@drawable/end_drawable"
        android:id="@+id/collect"
        android:layout_alignParentEnd="true"
        android:textSize="18sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp" />



</RelativeLayout>