<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#00000000"
    tools:context=".TripPackage.Collect">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/colorPrimaryDark">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_cross_white"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:id="@+id/cross"
                    android:contentDescription="@null"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contributions"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="35sp"
                    android:layout_marginEnd="25dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:id="@+id/contri"
                    android:layout_below="@+id/cross"
                    android:layout_marginRight="25dp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/box"
                    android:contentDescription="@null"
                    android:layout_below="@+id/contri"
                    android:layout_margin="20dp"
                    android:layout_above="@+id/collectHolder"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:id="@+id/collectHolder"
                    android:background="@drawable/collect"
                    android:layout_alignParentBottom="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/collect"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            android:id="@+id/collect"
                            android:textSize="50sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:textSize="35sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:id="@+id/price"
                            android:text="@string/dollar_zero"
                            android:layout_marginLeft="20dp" />

                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/this_amount_includes_only_group_contri_individuals_contri_will_be_added_at_the_checkout"
                        android:textColor="@color/grey"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:id="@+id/collectLine"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_expenses_showed_here_are_added_by_pratham"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="13sp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="10dp"
                        android:layout_alignParentBottom="true"
                        android:id="@+id/tagLine"
                        android:textStyle="bold" />

                </RelativeLayout>
                
            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>


</FrameLayout>