<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/cardView"
        app:cardCornerRadius="15sp"
        app:cardElevation="2dp"
        app:cardBackgroundColor="@color/white"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/forward"
                android:orientation="vertical"
                android:layout_toLeftOf="@+id/forward">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textColor="@color/black"
                        android:id="@+id/location"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_action_dot"
                        android:contentDescription="@null"
                        android:id="@+id/dot" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:id="@+id/price"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_action_person_grey"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personNo"
                        android:textColor="@color/grey"
                        android:layout_marginStart="5dp"
                        android:id="@+id/people"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="5dp" />
                    <ImageView
                        android:layout_width="20sp"
                        android:layout_height="20dp"
                        android:contentDescription="@null"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_action_time_grey"
                        android:layout_marginLeft="5dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@color/grey"
                        android:layout_marginStart="5dp"
                        android:textSize="15sp"
                        android:id="@+id/date"
                        android:textStyle="bold"
                        android:layout_marginLeft="5dp" />
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_forward_orange"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/forward"
                android:contentDescription="@null"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>